--- a/ml_part/day1_regression/lecture_linear_regression.ipynb
+++ b/ml_part/day1_regression/lecture_linear_regression.ipynb
@@ -7,6 +7,11 @@
     "# Introduction to regression methods\n",
     "\n",
     "## Goal: Obtain a well-suited function that captures input-output correlation\n",
+    "## Dataset:\n",
+    "$D={((\\mathbf x_{1}, y_{1}), ..., (\\mathbf x_{N}, y_{N}))}$,\n",
+    "\n",
+    "where $y_{i}\\epsilon \\mathbb{R}$\n",
+    "\n",
     "![Simple linear regression](resources/simple_regression.png)"
    ]
   },
@@ -512,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
