--- a/ml_part/day2_classification/lecture_classification.ipynb
+++ b/ml_part/day2_classification/lecture_classification.ipynb
@@ -13,8 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What does the dataset look like ?\n",
-    "$D={(x_{1}, y_{1}), ..., (x_{N}, y_{N})}$,\n",
+    "## Dataset \n",
+    "$D={((\\mathbf x_{1}, y_{1}), ..., (\\mathbf x_{N}, y_{N}))}$,\n",
     "\n",
     "where $y_{i}$ is either 1(=dog) or 0(=cat)"
    ]
