finish day 4 and 5

--- a/ml_part/day2_classification/lecture_classification.ipynb
+++ b/ml_part/day2_classification/lecture_classification.ipynb
@@ -170,7 +170,8 @@
     "Find a way to interpret the output of a linear regression as a probability distribution over different classes.\n",
     "### From linear regression to logistic regresssion\n",
     "$P(y_{i}=1)$: Probability of $x_{i}$ belonging to class 1(=dog)\n",
-    "![image.png](resources/logistic_regression.png)"
+    "![image.png](resources/logistic_regression.png)\n",
+    "![image.png](resources/sigmoid2.png)"
    ]
   },
   {
@@ -234,6 +235,13 @@
     "\n",
     "where $\\mathbf X \\epsilon \\mathbb{R}^{Nxd}$, $\\mathbf y \\epsilon \\mathbb{R}^{Nx1}$, $\\hat{\\mathbf y} \\epsilon \\mathbb{R}^{Nx1}$, $\\hat{\\mathbf y}=\\mathbf X \\mathbf \\beta $, $\\mathbf \\beta \\epsilon \\mathbb{R}^{dx1}$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
