--- a/ml_part/day1_regression/lecture_linear_regression.ipynb
+++ b/ml_part/day1_regression/lecture_linear_regression.ipynb
@@ -149,6 +149,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "change to pos income"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
