--- a/ml_part/day1_regression/practical_session.ipynb
+++ b/ml_part/day1_regression/practical_session.ipynb
@@ -111,6 +111,8 @@
     "- parse housing_price.csv data\n",
     "- one hot encode categorical features\n",
     "- apply multiple linear regression\n",
+    "- plot decision\n",
+    "- sklearn metric\n",
     "\n",
     "Formula for multidimensional linear regression:\n",
     "\n",
@@ -119,6 +121,15 @@
     "$\\mathbf{X}\\epsilon\\mathbb{R^{Nxd}}$,\n",
     "$\\mathbf{w}\\epsilon\\mathbb{R^{dx1}}$,\n",
     "$\\mathbf{y}\\epsilon\\mathbb{R^{Nx1}}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import linear regressor"
    ]
   },
   {
