--- a/ml_part/day2_classification/lecture_classification.ipynb
+++ b/ml_part/day2_classification/lecture_classification.ipynb
@@ -151,7 +151,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Beispiel code"
+   ]
   },
   {
    "cell_type": "code",
