--- a/ml_part/day1_regression/practical_session.ipynb
+++ b/ml_part/day1_regression/practical_session.ipynb
@@ -56,8 +56,10 @@
    "metadata": {},
    "source": [
     "# Q1: Implement Gradient descent and plot resulting regression line and data points\n",
-    "- implement mse loss function\n",
-    "- implement gradient descent algorithm"
+    "\n",
+    "1. implement mse loss function\n",
+    "2. implement gradient descent algorithm\n",
+    "3. run gradient descent and plot decision boundary after each iteration"
    ]
   },
   {
@@ -107,12 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q2: Implement linear regression on multi-dimensional data from real world\n",
-    "- parse housing_price.csv data\n",
-    "- one hot encode categorical features\n",
-    "- apply multiple linear regression\n",
-    "- plot decision\n",
-    "- sklearn metric\n",
+    "# Q2. Use sklearn to compare multiple different linear regression algorithms\n",
+    "1. Compare sklearn regression methods\n",
+    "2. Apply test metrics\n",
     "\n",
     "Formula for multidimensional linear regression:\n",
     "\n",
@@ -121,15 +120,6 @@
     "$\\mathbf{X}\\epsilon\\mathbb{R^{Nxd}}$,\n",
     "$\\mathbf{w}\\epsilon\\mathbb{R^{dx1}}$,\n",
     "$\\mathbf{y}\\epsilon\\mathbb{R^{Nx1}}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import linear regressor"
    ]
   },
   {
@@ -253,29 +243,6 @@
    "source": [
     "data = pd.read_csv('data/USA_Housing.csv')\n",
     "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Q3: Use sklearn to compare multiple different linear regression algorithms\n",
-    "1. Compare sklearn regression methods\n",
-    "2. Apply test metrics"
    ]
   },
   {
