add to lecture 1

--- a/ml_part/day1_regression/practical_session.ipynb
+++ b/ml_part/day1_regression/practical_session.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementing Gradient Descent\n",
+    "# Gradient Descent in pratice\n",
     "\n",
     "<img src=\"resources/gradient_descent.gif\"  />"
    ]
@@ -289,7 +289,7 @@
     "Documentation: https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html\n",
     "\n",
     "#### DO:\n",
-    "1. Split data unto training and test set\n",
+    "1. Split data into training and test set\n",
     "2. Separate labels(house price) from rest of the data\n",
     "3. Fill in missing values and transform categorical features to numerical ones\n",
     "4. Train model using your regression algorithm of choice\n",
