--- a/ml_part/day1_regression/lecture_linear_regression.ipynb
+++ b/ml_part/day1_regression/lecture_linear_regression.ipynb
@@ -448,9 +448,9 @@
     "\n",
     "In order to minimize set: $\\nabla_{w_{1}} MSE = 0$ and solve for $w_{1}$\n",
     "\n",
-    "$\\nabla_{w_{1}} MSE = \\lvert \\lvert \\mathbf{X}w_{1} - \\mathbf{y} \\lvert \\lvert^{2}=0$\n",
+    "$\\nabla_{w_{1}} MSE = w_{1}\\mathbf{X^{T}X} - \\mathbf{X^{T}y} = 0$\n",
     "\n",
-    "$\\Rightarrow w_{1}=(\\mathbf{X}^{T}\\mathbf{X})^{-1}\\mathbf{X}^{T}\\mathbf{y}$"
+    "$\\Rightarrow w_{1}=\\mathbf{X}^{T}\\mathbf{y}(\\mathbf{X}^{T}\\mathbf{X})^{-1}$"
    ]
   },
   {
