--- a/ml_part/day1_regression/solutions_practical_session.ipynb
+++ b/ml_part/day1_regression/solutions_practical_session.ipynb
@@ -49,7 +49,7 @@
     "#### Algorithm pseudo-code\n",
     "---\n",
     "```python\n",
-    "Randomly initialize w(0)\n",
+    "initialize w(0) = 100\n",
     "for step in range(training steps):\n",
     "    w(t+1) = w(t) - alpha * grad( J( w(t) ) ) \n",
     "    mse = mse(w(t+1))\n",
