--- a/ml_part/day3_unsupervised/lecture_unsupervised_learning.ipynb
+++ b/ml_part/day3_unsupervised/lecture_unsupervised_learning.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Unsupervised learning\n",
     "---\n",
-    "## Usually refers to clustering and dimensionality reduction methods, when no labels are available. \n",
+    "Unsupervised learning tries to handle the problem of finding important patterns in a given dataset when no label information is provided. The patterns are usually used as similarity measures in order to cluster data or reduce it's dimensionality.\n",
+    "\n",
     "### Moreover:\n",
     "- less expensive\n",
     "- easily available\n",
@@ -26,15 +27,17 @@
     "## 1. K-Means clustering\n",
     "### Goal:\n",
     "---\n",
+    "Just like with the nearest centroid classifier k-means tries to find centroids(means) of clusters and assigns each point to it's closest cluster mean. The number of mean vectors needs to be provided by the Data Scientist, as well as the number of iterations until the algorithm stops. Thus it makes sense to visualize the data beforehand in order to get an idea of how many cluster centroids are necessary to best express the data.\n",
     "![Binary classification](ressources/kmeans.png)\n",
+    "\n",
+    "\n",
+    "### Example 1: Typical k-means learning procedure\n",
+    "---\n",
+    "![Binary classification](ressources/kmeans.gif)\n",
     "\n",
     "### Pseudo-code:\n",
     "---\n",
     "![Binary classification](ressources/kmeans_algo.jpg)\n",
-    "\n",
-    "### Exmaple 1\n",
-    "---\n",
-    "![Binary classification](ressources/kmeans.gif)\n",
     "\n",
     "### Exmaple 2: Importance of initialization\n",
     "---\n",
