finish project task

--- a/ml_part/day3_unsupervised/solution_practice_clustering.ipynb
+++ b/ml_part/day3_unsupervised/solution_practice_clustering.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "\n",
     "## About the dataset:\n",
-    "Online retail is a transnational data set which contains all the transactions occurring between 01/12/2010 and 09/12/2011 for a UK-based and registered non-store online retail. The company mainly sells unique all-occasion gifts. Many customers of the company are wholesalers.\n",
+    "Online retail is a transactional data set which contains all the transactions occurring between 01/12/2010 and 09/12/2011 for a UK-based and registered non-store online retail. The company mainly sells unique all-occasion gifts. Many customers of the company are wholesalers.\n",
     "\n",
     "## Business Goal\n",
-    "We aim to segement the Customers based on RFM so that the company can target its customers efficiently.\n",
+    "We aim to segement the Customers based on k-means so that the company can target its customers efficiently.\n",
     "\n",
     "## Your tasks:\n",
-    "## Please implement it in the following oder:\n",
+    "## Please implement it in the following order:\n",
     "\n",
     "\n",
     "1. Load and explore the dataset: \n",
@@ -26,13 +26,15 @@
     "2. Split data into train- and testset(80%/20% ratio)\n",
     "\n",
     "\n",
-    "3. EDA:\n",
-    "    - Use data to build the following new features which we will use for clustering - NOTE: per userID(user ID = row, columns/features = the following):\n",
+    "3. EDA - Feature Engineering:\n",
+    "    - Use data to build the following new features which we will use for clustering: \n",
     "        1. Monetary: Total amount(revenue contributed) of transactions: \n",
     "                -userpurchases(amount) * unit price\n",
     "        2. Frequency: Number of transactions\n",
     "                - count number of user purchases\n",
+    "    - NOTE: At the end of above step you should have a table, where each row represents a user ID, with the 2 specified features from above\n",
     "    - Mean-center and standardize the data\n",
+    "        - check out: https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html\n",
     "    - Plot the data\n",
     "    ## OUTLIERS!\n",
     "    - Remove outliers with the given function\n",
