--- a/ml_part/day3_unsupervised/practice_clustering.ipynb
+++ b/ml_part/day3_unsupervised/practice_clustering.ipynb
@@ -9,10 +9,10 @@
     "\n",
     "\n",
     "## About the dataset:\n",
-    "Online retail is a transnational data set which contains all the transactions occurring between 01/12/2010 and 09/12/2011 for a UK-based and registered non-store online retail. The company mainly sells unique all-occasion gifts. Many customers of the company are wholesalers.\n",
+    "Online retail is a transactional data set which contains all the transactions occurring between 01/12/2010 and 09/12/2011 for a UK-based and registered non-store online retail. The company mainly sells unique all-occasion gifts. Many customers of the company are wholesalers.\n",
     "\n",
     "## Business Goal\n",
-    "We aim to segement the Customers based on RFM so that the company can target its customers efficiently.\n",
+    "We aim to segement the Customers based on k-means so that the company can target its customers efficiently.\n",
     "\n",
     "## Your tasks:\n",
     "## Please implement it in the following oder:\n",
@@ -26,13 +26,15 @@
     "2. Split data into train- and testset(80%/20% ratio)\n",
     "\n",
     "\n",
-    "3. EDA:\n",
-    "    - Use data to build the following new features which we will use for clustering - NOTE: per userID(user ID = row, columns/features = the following):\n",
+    "3. EDA - Feature Engineering:\n",
+    "    - Use data to build the following new features which we will use for clustering: \n",
     "        1. Monetary: Total amount(revenue contributed) of transactions: \n",
     "                -userpurchases(amount) * unit price\n",
     "        2. Frequency: Number of transactions\n",
     "                - count number of user purchases\n",
+    "    - NOTE: At the end of above step you should have a table, where each row represents a user ID, with the 2 specified features from above\n",
     "    - Mean-center and standardize the data\n",
+    "        - check out: https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html\n",
     "    - Plot the data\n",
     "    ## OUTLIERS!\n",
     "    - Remove outliers with the given function\n",
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +61,16 @@
     "\n",
     "import sklearn\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "from scipy.cluster.hierarchy import linkage\n",
+    "from scipy.cluster.hierarchy import dendrogram\n",
+    "from scipy.cluster.hierarchy import cut_tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +180,7 @@
        "4  01-12-2010 08:26       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,21 +192,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 541909 entries, 0 to 541908\n",
+      "Data columns (total 8 columns):\n",
+      "InvoiceNo      541909 non-null object\n",
+      "StockCode      541909 non-null object\n",
+      "Description    540455 non-null object\n",
+      "Quantity       541909 non-null int64\n",
+      "InvoiceDate    541909 non-null object\n",
+      "UnitPrice      541909 non-null float64\n",
+      "CustomerID     406829 non-null float64\n",
+      "Country        541909 non-null object\n",
+      "dtypes: float64(2), int64(1), object(5)\n",
+      "memory usage: 33.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = data.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changing the datatype of Customer Id as per Business understanding\n",
+    "data['CustomerID'] = data['CustomerID'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Monetary feature\n",
+    "\n",
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Frequency feature\n",
+    "\n",
+    "# TODO"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_df = # TODO"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rescale the attributes\n",
+    "\n",
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Plot the data and observe outliers\n",
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,21 +312,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Plot the data again and see that it looks much better now\n",
+    "\n",
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply KMEANS\n",
+    "\n",
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the clustered data\n",
+    "\n",
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q2.: Dimensionality Reduction"
+   ]
   },
   {
    "cell_type": "code",
@@ -252,6 +370,20 @@
     "    - plot the data projected onto these two components\n",
     "    - apply kmeans, does it work better than the former method "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
