--- a/ml_part/day4_neural_nets/lecture_neural_nets.ipynb
+++ b/ml_part/day4_neural_nets/lecture_neural_nets.ipynb
@@ -175,8 +175,8 @@
    "metadata": {},
    "source": [
     "# 2 popular open-source neural network frameworks: \n",
-    "- Tensorflow(Google): https://www.tensorflow.org/\n",
-    "- PyTorch(Facebook): https://pytorch.org/"
+    "- Tensorflow(formerly Google): https://www.tensorflow.org/\n",
+    "- PyTorch(formerly Facebook): https://pytorch.org/"
    ]
   },
   {
