--- a/ml_part/project/project_notebook.ipynb
+++ b/ml_part/project/project_notebook.ipynb
@@ -28,9 +28,11 @@
     "    \n",
     "2. Preprocess it, explore it and format it into a Machine learning-classifier digestable format.\n",
     "\n",
-    "3. Train your model on the training set, and predict an item for the each row in the test set(DON'T change the order of the test set)\n",
+    "3. Train your model on the training set, and predict an item for the each row in the test set(DON'T change the order of the test set):\n",
+    "    - Item-predictions should be in the original string format(=item name)\n",
     "\n",
     "4. Save the predictions for the test set in a csv-file\n",
+    "\n",
     "\n",
     "### Note on implementation:\n",
     "- You are free to use any classification algorithm that you want. If you find better recommendation approaches on the web(there certainly are better, but also more involved ones), you are free to use those. The main goal though will be to \n",
