--- a/ml_part/project/project_assignment/project_notebook.ipynb
+++ b/ml_part/project/project_assignment/project_notebook.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,131 +89,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_x = pd.read_csv('training_data.csv', header=None)\n",
-    "test_x = pd.read_csv('test_data.csv', header=None)\n",
-    "train_y = pd.read_csv('training_labels.csv', header=None)\n",
-    "test_y = pd.read_csv('test_labels.csv', header=None)"
+    "train_x = pd.read_csv('data/training_data.csv', header=None)\n",
+    "test_x = pd.read_csv('data/test_data.csv', header=None)\n",
+    "train_y = pd.read_csv('data/training_labels.csv', header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "training_data = train_x.fillna('NaN').to_numpy()\n",
-    "test_data = test_x.fillna('NaN').to_numpy()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "all_products = np.unique(training_data.flatten())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "final_products = np.delete(all_products, 1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "X_train = None\n",
-    "for idx, row in enumerate(training_data):\n",
-    "    if idx == 0:\n",
-    "        X_train = np.array([e in row for e in final_products]).astype(int)\n",
-    "    else:\n",
-    "        new_row = np.array([e in row for e in final_products]).astype(int)\n",
-    "        X_train = np.vstack([X_train, new_row])\n",
-    "        \n",
-    "X_test = None\n",
-    "for idx, row in enumerate(test_data):\n",
-    "    if idx == 0:\n",
-    "        X_test = np.array([e in row for e in final_products]).astype(int)\n",
-    "    else:\n",
-    "        new_row = np.array([e in row for e in final_products]).astype(int)\n",
-    "        X_test = np.vstack([X_test, new_row])\n",
-    "\n",
-    "y_train = np.array([np.where(final_products == e) for e in training_labels]).reshape(-1)\n",
-    "y_test = np.array([np.where(final_products == e) for e in test_labels]).reshape(-1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model = LogisticRegression()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dg/envs/ds/lib/python3.6/site-packages/sklearn/linear_model/_logistic.py:939: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html.\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
-     ]
-    }
-   ],
-   "source": [
-    "trained_model = model.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "predictions = trained_model.predict(X_test)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1904127829560586"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracy_score(predictions, y_test)"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
