--- a/ml_part/project/project_assignment/project_notebook.ipynb
+++ b/ml_part/project/project_assignment/project_notebook.ipynb
@@ -34,6 +34,7 @@
     "2. Plot the following statistics:\n",
     "    - histogram of 10 most purchased products\n",
     "    - pie chart of all product purchase frequencies\n",
+    "    - which other interesting plots can you think of ? -> extra points\n",
     "\n",
     "\n",
     "\n",
