--- a/ml_part/project/project_assignment/project_notebook.ipynb
+++ b/ml_part/project/project_assignment/project_notebook.ipynb
@@ -75,11 +75,10 @@
     "\n",
     "### Note on implementation:\n",
     "- You are free to use any classification algorithm that you want. If you find better recommendation approaches on the web(there certainly are better, but also more involved ones), you are free to use those. The main goal though will be to \n",
-    "- Try to implement classes\n",
     "\n",
     "\n",
     "### Note on grading:\n",
-    "- End result = 25%\n",
+    "- End result on the classification task = 25%\n",
     "- Clean code(e.g. classes instead of script like functions etc.) = 25 %\n",
     "- Documentation = 25%\n",
     "- Usage of numpy, pandas, pyplot etc. functions for faster computation = 25%"
