--- a/ml_part/project/project_assignment/project_notebook.ipynb
+++ b/ml_part/project/project_assignment/project_notebook.ipynb
@@ -31,14 +31,13 @@
     "    - The labels represent the item that was purchased by the customer in addition to the items in the dataset\n",
     "    \n",
     "    \n",
-    "2. Plot the following statistics:\n",
+    "2. Plot the following statistics on the joined datasets(train_x + train_y):\n",
     "    - histogram of 10 most purchased products\n",
     "    - pie chart of all product purchase frequencies\n",
     "    - which other interesting plots can you think of ? -> extra points\n",
     "\n",
     "\n",
-    "\n",
-    "3. Compute and present the following results(you are free to choose any method to present your results):\n",
+    "3. Compute and present the following results on joined data sets, train_x + train_y(you are free to choose any method to present your results):\n",
     "    - Find the pair of products, that are bought together the most\n",
     "    - How many customers purchased all the products \n",
     "    - Which product was the least purchased ?\n",
@@ -65,17 +64,18 @@
     "    \n",
     "\n",
     "\n",
-    "5. Train your model on the training set, and predict an item for the each row in the test set(DON'T change the order of the test set):\n",
+    "5. Train your model on the training set(=train_x, train_y), and predict an item for the each row in the test set(=test_x).DON'T change the order of the test set:\n",
     "    - Item-predictions should be in the original string format(=item name)\n",
+    "    - You can predict numerical values and then convert them back into strings\n",
     "\n",
-    "\n",
-    "\n",
-    "6. Save the predictions for the test set in a csv-file\n",
+    "6. Save the predictions(=string representations) for the test set in a csv-file\n",
     "\n",
     "\n",
     "### Note on implementation:\n",
-    "- You are free to use any classification algorithm that you want. If you find better recommendation approaches on the web(there certainly are better, but also more involved ones), you are free to use those. The main goal though will be to \n",
-    "\n",
+    "- You are free to use any classification algorithm that you want. If you find better recommendation approaches on the web(there certainly are better, but also more involved ones), you are free to use those.\n",
+    "- Some proven algorithms, other than the ones learned in the lectures are: \n",
+    "    - https://towardsdatascience.com/intro-to-recommender-system-collaborative-filtering-64a238194a26\n",
+    "    - https://towardsdatascience.com/prototyping-a-recommender-system-step-by-step-part-1-knn-item-based-collaborative-filtering-637969614ea\n",
     "\n",
     "### Note on grading:\n",
     "- End result on the classification task = 25%\n",
